--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.2",
     "redis": "^3.0.2",
     "shortid": "^2.2.15",
-    "valid-url": "^1.0.9"
+    "valid-url": "^1.0.9",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
